--- a/images/store.html
+++ b/images/store.html
@@ -4,10 +4,10 @@
         <title>The Generics | Store</title>
         <meta name="description" content="This is the description">
         <link rel="stylesheet" href="styles.css" />
-        <!-- <script src="store.js" async></script> -->
+        <script src="store.js" async></script>
     </head>
     <body>
-        <header class="main-header">
+        <header class="main-header2">
             <nav class="main-nav nav">
                 <ul>
                     <li><a href="index.html">HOME</a></li>
@@ -15,7 +15,7 @@
                     <li><a href="tour.html">TOURS</a></li>
                 </ul>
             </nav>
-            <h1 class="band-name band-name-large">The Generics</h1>
+            <h1 class="our-name our-name-large">Flies on the Fly</h1>
         </header>
         <section class="container content-section">
             <h2 class="section-header">Flies</h2>
@@ -141,7 +141,7 @@
         </section>
         <footer class="main-footer3">
             <div class="container main-footer-container">
-                <h3 class="band-name">VISIT US</h3>
+                <h3 class="our-name">VISIT US</h3>
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.facebook.com" target="_blank">
