--- a/images/index.html
+++ b/images/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="This is the description">
         <link rel="stylesheet" href="styles.css" />
     </head>
-    <body>
+    <body class="body1">
         <header class="main-header">
             <nav class="nav main-nav">
                 <ul>
@@ -14,7 +14,7 @@
                     <li><a href="tour.html">TOURS</a></li>
                 </ul>
             </nav>
-            <h1 class="band-name band-name-large">Flies-on-the-Fly.</h1>
+            <h1 class="our-name our-name-large">Flies-on-the-Fly.</h1>
         </header>
         <section class="content-section1 container1">
             <img class="about-image" src="logos/My project.png" id="myLogo">
@@ -23,7 +23,6 @@
             <h2 class="section-header" id="sec1">ABOUT</h2>
             <p class="p1">"Flies on the Fly" is your one stop shop for everything Fly! We specialize in custom fly boxes and custom fly collections, but wait...there's More! Not only do we specialize in flies, but we also offer guided tours with some of the most knowledgable and experienced guides in the American South-West. So wether you are a seasoned and experienced angler who just needs a little help finding the best spots on a new river, or a beginner just learning how to cast, our guides are here to ensure you have the most enjoyable and productive day possible while out on the water.</p>
         </section>
-
         <footer class="main-footer1">
             <div class="container main-footer-container">
                 <h3 class="band-name">FOLLOW US ON</h3>
