--- a/images/store.html
+++ b/images/store.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>The Generics | Store</title>
+        <title>Store</title>
         <meta name="description" content="This is the description">
         <link rel="stylesheet" href="styles.css" />
         <script src="store.js" async></script>
     </head>
     <body>
         <header class="main-header2">
-            <nav class="main-nav nav">
+            <nav class="nav">
                 <ul>
+                    <img class="logo1" img src="logos/My project.png" id="logo-sz">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="store.html">STORE</a></li>
                     <li><a href="tour.html">TOURS</a></li>
                 </ul>
             </nav>
-            <h1 class="our-name our-name-large">Flies on the Fly</h1>
         </header>
         <section class="container content-section">
-            <h2 class="section-header">Flies</h2>
+            <h2 class="section-header" id="store1">Flies</h2>
             <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">Nymph Coll. #1</span>
@@ -87,7 +87,7 @@
             </div>
         </section>
         <section class="container content-section">
-            <h2 class="section-header">Handcrafted Fly-boxes</h2>
+            <h2 class="section-header" id="store2">Handcrafted Fly-boxes</h2>
             <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">Drk. Hackle</span>
@@ -124,7 +124,7 @@
             </div>
         </section>
         <section class="container content-section">
-            <h2 class="section-header">CART</h2>
+            <h2 class="section-header" id="cart1">CART</h2>
             <div class="cart-row">
                 <span class="cart-item cart-header cart-column">ITEM</span>
                 <span class="cart-price cart-header cart-column">PRICE</span>
@@ -141,7 +141,6 @@
         </section>
         <footer class="main-footer3">
             <div class="container main-footer-container">
-                <h3 class="our-name">VISIT US</h3>
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.facebook.com" target="_blank">
