--- a/images/tour.html
+++ b/images/tour.html
@@ -8,14 +8,14 @@
     </head>
 <body>
     <header class="main-header3">
-        <nav class="nav main-nav">
+        <nav class="nav">
             <ul>
+                <img class="logo1" src="logos/My project.png">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="store.html">STORE</a></li>
                 <li><a href="tour.html">TOURS</a></li>
             </ul>
             </nav>
-        <h1 class="our-name our-name-large">fotf</h1>
         <div class="container">
     </header>
     <section class="content-section container">
@@ -74,7 +74,7 @@
                 <button type="button" class="tour-item tour-btn btn btn-primary">RESERVE</button>
             </div>
             <div class="tour-row">
-                <span class="tour-item tour-date">April 23rd</span>
+                <span class="tour-item tour-date">April 23 </span>
                 <span class="tour-item tour-days">(3day) April 23-25th</span>
                 <span class="tour-item tour-location">Lees Ferry, Marble Canyon Az.</span>
                 <button type="button" class="tour-item tour-btn btn btn-primary">RESERVE</button>
@@ -95,7 +95,6 @@
         </section>
         <footer class="main-footer2">
             <div class="container main-footer-container">
-                <h3 class="our-name">FOLLOW US</h3>
                 <ul class="nav footer-nav">
                     <li>
                         <a href="https://www.facebook.com" target="_blank">
